Adding a cloth sim to an object does not make it possible to go into Particle Mode for that object. #36846

Closed
opened 2013-09-28 19:15:21 +02:00 by Jens Zamanian · 3 comments

%%%It is possible to edit the cache of a cloth and softbody simulation via the Particle Mode (using e.g. the comb tool). However, adding a cloth or soft body simulation to an object does not enable going into the Particle Mode in the 3D-view. Temporarily adding a particle system makes it possible to go into Particle Mode and actually edit the caches of the cloth or soft body simulations (by setting the Option to Cloth or Soft body in the brush settings).

In previous versions (2.5 or 2.6x) (unsure which, but it was used in the Blender Cookie 2010 training series) it was possible to go directly to Particle Mode for an object as soon as the simulation was enabled.

- Operating System, Graphics card ---

OSX 10.6.8

- Blender version with error, and version that worked ---

2.68, not sure which one it worked on.

- Short description of error ---


- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Add a soft body or a cloth simulation to an object and bake the cache.
  2. With the object selected: Check the drop down menu in the 3d-view for Particle Mode (should be missing).
  3. Add a particle system to the object.
  4. Now Particle Mode is available from which the soft body or cloth simulation can be edited.

%%%

%%%It is possible to edit the cache of a cloth and softbody simulation via the Particle Mode (using e.g. the comb tool). However, adding a cloth or soft body simulation to an object does not enable going into the Particle Mode in the 3D-view. Temporarily adding a particle system makes it possible to go into Particle Mode and actually edit the caches of the cloth or soft body simulations (by setting the Option to Cloth or Soft body in the brush settings). In previous versions (2.5 or 2.6x) (unsure which, but it was used in the Blender Cookie 2010 training series) it was possible to go directly to Particle Mode for an object as soon as the simulation was enabled. - Operating System, Graphics card --- OSX 10.6.8 - Blender version with error, and version that worked --- 2.68, not sure which one it worked on. - Short description of error --- - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Add a soft body or a cloth simulation to an object and bake the cache. 2. With the object selected: Check the drop down menu in the 3d-view for Particle Mode (should be missing). 3. Add a particle system to the object. 4. Now Particle Mode is available from which the soft body or cloth simulation can be edited. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60438, thanks for the report! :)%%%

%%%Fixed in r60438, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36846
No description provided.