Fix [#36846] Adding a cloth sim to an object does not make it possible to go into Particle Mode for that object.

Softbody/cloth were not checked when building available modes enum.